# mossy-ai

./: .gitignore  README.md  SUBMISSION.md
agent/: .env.example  knowledge.json  pyproject.toml
agent/src/: agent.py
frontend/app/desk/: page.tsx
frontend/app/desk/analytics/: page.tsx
frontend/components/agents-ui/blocks/agent-session-view-01/components/: agent-session-block.tsx
frontend/components/app/: escalation-banner.tsx
frontend/hooks/: useEscalationEvent.ts
frontend/lib/: memory.ts
pickup/: .env.example  README.md  build_index.py  requirements.txt
pickup/app/: agent.py  memory_service.py
pickup/data/: support_kb.json
pickup/spike/: _shared.py  reader.py  writer.py
