[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[silero,turn-detector]==1.5.16",
    "livekit-plugins-ai-coustics~=0.2",
    "python-dotenv",
    "moss>=1.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]
# moss 1.4 hard-pins inferedge-moss-core==0.14.0, but 0.14.0 makes
# SessionIndex.push_index() fail with HTTP 400 "property modelId should not
# exist". 0.17.0 fixes the push payload. Override the transitive pin.
override-dependencies = ["inferedge-moss-core==0.17.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
